k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pathcanvas-frontend
  labels:
    app: pathcanvas-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pathcanvas-frontend
  template:
    metadata:
      labels:
        app: pathcanvas-frontend
    spec:
      containers:
        - name: frontend
          image: meddhiarejeb/pathcanvas-frontend:latest
          ports:
            - containerPort: 80
